--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.0.0-alpha.19",
-    "@ant-design/pro-layout": "^5.0.0",
+    "@ant-design/pro-layout": "^6.0.0-4",
     "@ant-design/pro-table": "^2.0.0",
     "@antv/data-set": "^0.11.1",
     "antd": "^4.1.1",
@@ -67,7 +67,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "redux": "^4.0.1",
-    "umi": "^2.13.0",
+    "umi": "^2.13.13",
     "umi-plugin-antd-icon-config": "^1.0.2",
     "umi-plugin-antd-theme": "1.2.0-0",
     "umi-plugin-pro-block": "^1.3.2",
@@ -107,6 +107,7 @@
     "umi-plugin-pro": "^1.0.2",
     "umi-types": "^0.5.9"
   },
+  "proxy": "http://localhost:8000",
   "optionalDependencies": {
     "puppeteer": "^2.0.0"
   },
